--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threejs-starter-kit",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "My workflow for three-js demos",
   "main": "src/index.js",
   "repository": "superguigui/threejs-starter-kit",
@@ -15,15 +15,15 @@
     "budo": "^8.3.0"
   },
   "dependencies": {
-    "@superguigui/wagner": "^0.1.23",
+    "@superguigui/wagner": "*",
     "brindille-resize": "^0.1.3",
     "clamp": "^1.0.1",
-    "dat-gui": "^0.5.0",
     "glslify": "^5.0.2",
+    "guigui": "*",
     "mouse-event-offset": "^3.0.2",
     "mouse-wheel": "^1.1.0",
     "raf-loop": "^1.1.3",
-    "three": "^0.80.1"
+    "three": "*"
   },
   "author": "Guillaume Gouessan",
   "license": "BSD-2-Clause"
