--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threejs-starter-kit",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "My workflow for three-js demos",
   "main": "src/index.js",
   "repository": "superguigui/threejs-starter-kit",
@@ -9,9 +9,8 @@
     "build": "browserify -v -d src/index.js -t babelify -t glslify | uglifyjs -nm > index.js"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.6.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "budo": "^8.3.0",
@@ -22,7 +21,7 @@
     "brindille-resize": "^0.1.3",
     "clamp": "^1.0.1",
     "glslify": "^5.0.2",
-    "guigui": "*",
+    "guigui": "github:superguigui/guigui#dev",
     "mouse-event-offset": "^3.0.2",
     "mouse-wheel": "^1.1.0",
     "raf-loop": "^1.1.3",
