--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "threejs-starter-kit",
-  "version": "0.0.5",
-  "description": "My workflow for three-js demos",
+  "version": "0.1.0",
+  "description": "My workflow for threejs demos",
   "main": "src/index.js",
-  "repository": "superguigui/threejs-starter-kit",
   "scripts": {
-    "start": "budo src/index.js --open --live -- -t babelify -t glslify",
-    "build": "browserify src/index.js -t babelify -t glslify -p tinyify > index.js"
+    "start": "webpack-dev-server --host 0.0.0.0 --open",
+    "build": "webpack --env.prod",
+    "now-build": "webpack --env.prod"
   },
+  "repository": "superguigui/threejs-starter-kit",
+  "author": "Guillaume Gouessan <guillaume.gouessan+gh@gmail.com>",
+  "license": "ISC",
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "budo": "^8.3.0",
-    "tinyify": "^2.3.0"
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
+    "glslify-loader": "github:pqml/glslify-loader",
+    "guigui": "^2.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^0.5.1",
+    "stats.js": "^0.17.0",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@superguigui/wagner": "*",
-    "brindille-resize": "^0.1.3",
-    "clamp": "^1.0.1",
-    "glslify": "^5.0.2",
-    "guigui": "^2.0.0",
-    "mouse-event-offset": "^3.0.2",
-    "mouse-wheel": "^1.1.0",
-    "raf-loop": "^1.1.3",
-    "three": "*"
-  },
-  "author": "Guillaume Gouessan",
-  "license": "BSD-2-Clause"
+    "postprocessing": "^5.3.2",
+    "three": "^0.99.0"
+  }
 }
