--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threejs-starter-kit",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "My workflow for threejs demos",
   "main": "src/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^5.0.0",
     "glslify-loader": "github:pqml/glslify-loader",
     "guigui": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -22,10 +23,10 @@
     "stats.js": "^0.17.0",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "postprocessing": "^5.3.2",
-    "three": "^0.99.0"
+    "postprocessing": "*",
+    "three": "*"
   }
 }
