--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My workflow for threejs demos",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --open",
+    "start": "webpack-dev-server --open",
     "build": "webpack --env.prod",
     "now-build": "webpack --env.prod"
   },
@@ -15,15 +15,15 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^5.0.0",
-    "glslify-loader": "github:pqml/glslify-loader",
+    "copy-webpack-plugin": "^5.1.1",
+    "glslify-loader": "^2.0.0",
     "guigui": "^2.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "raw-loader": "^0.5.1",
+    "html-webpack-plugin": "^4.3.0",
+    "raw-loader": "^4.0.1",
     "stats.js": "^0.17.0",
-    "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "postprocessing": "*",
